Cleanup and add styles

--- a/mail-subscriptions-ui/MailSubscriptionsApp/MailSubscriptionsApp/ui-app/src/modules/app/app.component.scss
+++ b/mail-subscriptions-ui/MailSubscriptionsApp/MailSubscriptionsApp/ui-app/src/modules/app/app.component.scss
@@ -1,5 +1,8 @@
 @import '../../style-themes';
 
-  .selected {
-      background-color: $selected-background-color;
-  }  
+:host {
+    display: flex;
+    flex-flow: column;
+    justify-content: flex-start;
+    align-items: center;
+}
