--- a/mail-subscriptions-ui/MailSubscriptionsApp/MailSubscriptionsApp/ui-app/src/style-themes.scss
+++ b/mail-subscriptions-ui/MailSubscriptionsApp/MailSubscriptionsApp/ui-app/src/style-themes.scss
@@ -1,3 +1,6 @@
 $selected-background-color: gold;
 $invalid-color: red;
 
+$background-color: #37474F;
+$main-text-color: #CFD8DC;
+$selected-backround: #455A64;
