--- a/mail-subscriptions-ui/MailSubscriptionsApp/MailSubscriptionsApp/ui-app/src/modules/app/components/subscriptions/subscriptions.component.html
+++ b/mail-subscriptions-ui/MailSubscriptionsApp/MailSubscriptionsApp/ui-app/src/modules/app/components/subscriptions/subscriptions.component.html
@@ -1,3 +1,4 @@
+<!-- This component is too big - should be splited to smaller parts-->
 <div>
     <h1>
         Please subscribe for channel
@@ -5,7 +6,7 @@
     <form class="subscriptions-form" [formGroup]="submissionFormGroup" #ngForm="ngForm" (ngSubmit)="submitForm()">
       <mat-card>
         <mat-card-title>Topics</mat-card-title>
-        <mat-selection-list [class.invalid]="isTopicsInvalidState()" (selectionChange)="selectedTopicChanged($event)">
+        <mat-selection-list #selectionListRef [class.invalid]="isTopicsInvalidState()" (selectionChange)="selectedTopicChanged($event)">
           <mat-list-option *ngFor="let topic of topics" [value]="topic" checkboxPosition="before">
             {{topic.displayName}}
           </mat-list-option>
@@ -13,18 +14,20 @@
         <mat-error class="invalid-font" *ngIf="isTopicsInvalidState()">
           At least one topic is <strong>required</strong>
         </mat-error>
-      </mat-card>   
-      <mat-form-field>
-        <input matInput placeholder="Email" formControlName="email"
-                [errorStateMatcher]="matcher">
-        <mat-hint>Provide an email</mat-hint>
-        <mat-error *ngIf="submissionFormGroup.get('email').hasError('email') && !submissionFormGroup.get('email').hasError('required')">
-          Please enter a valid email address
-        </mat-error>
-        <mat-error *ngIf="submissionFormGroup.get('email').hasError('required')">
-          Email is <strong>required</strong>
-        </mat-error>
-      </mat-form-field>
-      <button mat-raised-button>Subscribe</button>
+      </mat-card>
+      <mat-card>
+        <mat-form-field>
+          <input matInput placeholder="Email" formControlName="email"
+                  [errorStateMatcher]="matcher">
+          <mat-hint>Provide an email</mat-hint>
+          <mat-error *ngIf="submissionFormGroup.get('email').hasError('email') && !submissionFormGroup.get('email').hasError('required')">
+            Please enter a valid email address
+          </mat-error>
+          <mat-error *ngIf="submissionFormGroup.get('email').hasError('required')">
+            Email is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
+      </mat-card>
+      <button mat-raised-button [disabled]="isBusy">Subscribe</button>
     </form>
 </div>
