--- a/mail-subscriptions-ui/MailSubscriptionsApp/MailSubscriptionsApp/ui-app/src/modules/app/components/subscriptions/subscriptions.component.scss
+++ b/mail-subscriptions-ui/MailSubscriptionsApp/MailSubscriptionsApp/ui-app/src/modules/app/components/subscriptions/subscriptions.component.scss
@@ -5,6 +5,13 @@
     flex-flow: column;
     width:auto;
     max-width: 500px;
+    mat-card {
+        margin: 10px;
+    }
+
+    mat-form-field {
+        width: 100%;
+    }
 }
 .invalid {
     border-color: $invalid-color;
