--- a/mail-subscriptions-ui/MailSubscriptionsApp/MailSubscriptionsApp/ui-app/src/styles.scss
+++ b/mail-subscriptions-ui/MailSubscriptionsApp/MailSubscriptionsApp/ui-app/src/styles.scss
@@ -1,5 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "./style-themes.scss";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { 
+    height: 100%; 
+    background-color: $background-color;
+    color: $main-text-color;
+}
+body {
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+app-root {
+    width: 100%;
+    height: 100%;
+    .loading-logo {
+        position: fixed;
+        left: 50vw;
+        top: 30vh;
+    }
+}
+
+.selected {
+    background-color: $selected-backround;
+}
